# full-stack-ml

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.override.yml  docker-compose.yml  env-template
docs/: Dockerfile  README.md  nginx.conf  pyproject.toml
docs/docs/: conf.py  index.rst  user-guide.rst
docs/tests/: test_docs.py
libraries/imagenet/: Dockerfile  README.rst  pyproject.toml
libraries/imagenet/imagenet/: __init__.py  main.py
libraries/imagenet/tests/: test_imagenet.py
projects/app/: README.md  package-lock.json  package.json
projects/app/src/: main.ts
projects/backend/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  openapi.yaml  pyproject.toml
projects/backend/app/: config.py  main.py
projects/backend/app/api/api_v1/: api.py
projects/backend/app/api/api_v1/routers/: accounts.py  auth.py  predict.py  roles.py  user_roles.py  users.py
projects/backend/app/core/: auth.py  security.py
projects/backend/app/db/: __init__.py  crud.py  entities.py  schemas.py  session.py
projects/backend/app/entities/: __init__.py  account.py  role.py  user.py  user_role.py
projects/backend/app/migrations/: env.py
projects/backend/app/migrations/versions/: 6f20a3527971_init.py  cf75dc2df969_init.py
projects/backend/app/schemas/: __init__.py  account.py  role.py  token.py  user.py  user_role.py
projects/backend/app/tests/: conftest.py  test_celery.py  test_tasks.py
projects/backend/app/tests/api/api_v1/: test_auth.py  test_users.py
projects/backend/app/utils/: role.py  utils.py
projects/backend/scripts/: export_openapi.py  initial_data.py  pre_start.py
projects/frontend/: Dockerfile  nginx.conf  nginx_server_block.conf  package-lock.json  package.json
projects/frontend/src/: Routes.tsx
projects/frontend/src/admin/: authProvider.ts
projects/frontend/src/api/: api.ts  base.ts  common.ts  configuration.ts  index.ts
projects/frontend/src/config/: index.tsx
projects/frontend/src/utils/: api.ts  auth.ts
projects/frontend/src/views/: Dashboard.tsx  Home.tsx  Login.tsx  PrivateRoute.tsx  SignUp.tsx  index.ts
projects/proxy/: Dockerfile  nginx.conf
projects/traefik/: traefik.dev.toml  traefik.prod.toml
projects/web/: Dockerfile  nginx-deploy.conf
