[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["morten.aslesen <mortendaehli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70"
uvicorn = "^0.15"
python-multipart = "^0.0.5"
sqlalchemy = "^1.4.23"
email-validator = "^1"
requests = "^2.26"
celery = "^5"
passlib = {extras = ["bcrypt"], version = "^1"}
tenacity = "^8"
pydantic = "^1"
emails = "^0.6"
raven = "^6"
jinja2 = "^3"
psycopg2-binary = "^2.9.1"
alembic = "^1.7.3"
python-jose = {extras = ["cryptography"], version = "^3"}
jwt = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
